# FacchiniRPG

./: .gitignore  CMakeLists.txt  Character.h  Inventory.h  Item.h  LICENSE  README.md  build.gradle  items.json  main.cpp  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
include/: Character.h  Colors.h  Inventory.h  Item.h  Mushroom.h  Player.h  Statistics.h  Warrior.h
src/: main.cpp
src/assets/maps/: default.txt
src/entity/: Entity.java  Player.java
src/main/: AssetSetter.java  CollisionManager.java  GamePanel.java  GamePanel.md  KeyHandler.java  Main.java  TODO.md  main.md
src/main/java/com/lucafacchini/: AssetSetter.java  CollisionManager.java  GamePanel.java  KeyHandler.java  Main.java  Sound.java  UI.java  Utilities.java
src/main/java/com/lucafacchini/entity/: Entity.java  NPC_OldMan.java  Player.java  Utilities.java
src/main/java/com/lucafacchini/objects/: Boots_Object.java  Chest_Object.java  Door_Object.java  Key_Object.java  SuperObject.java
src/main/java/com/lucafacchini/tiles/: Tile.java  TileManager.java
src/main/resources/maps/: background.csv  default.txt  firstLayer.csv  groundDecoration.csv  groundLevel.csv  groundObjects.csv  passBehind_background.csv  passBehind_groundObjects.csv  secondLayer.csv  thirdLayer.csv
src/objects/: Door_Object.java  Key_Object.java  SuperObject.java
src/resources/maps/: default.txt
src/tiles/: Tile.java  TileManager.java
